--- a/web/public/scratchjr/settings.json
+++ b/web/public/scratchjr/settings.json
@@ -26,6 +26,7 @@
         "Deutsch": "de",
         "Ελληνικά": "el",
         "English": "en",
+        "עברית": "He",
         "Español": "es",
         "Français": "fr",
         "Italiano": "it",
