--- a/web/public/scratchjr/settings.json
+++ b/web/public/scratchjr/settings.json
@@ -3,7 +3,7 @@
     "scratchJrVersion": "iOSv01",
     "useStoryStarters": false,
     "shareEnabled": true, 
-    "defaultSprite": "star.svg",
+    "defaultSprite": "Star.svg",
     "spriteOutlineColor": "white",
     "stageColor": "#F5F2F7",
     "textSpriteFont": "Helvetica",
